--- a/module3 - python.ipynb
+++ b/module3 - python.ipynb
@@ -230,18 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bfdd2a26",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to select an item randomly from a list.\n",
     "import random as rd\n",
@@ -252,23 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7eb4278d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter how many elements you want in a list : 4\n",
-      "enter number to add in list : 76\n",
-      "enter number to add in list : 55\n",
-      "enter number to add in list : 45\n",
-      "enter number to add in list : 33\n",
-      "second smallest number in a list is  45\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to find the second smallest number in a list.\n",
     "\n",
@@ -289,6 +268,7 @@
    "outputs": [],
    "source": [
     "Write a Python program to check whether a list contains a sub list\n",
+    "\n",
     "\n"
    ]
   },
@@ -319,18 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5c9d09d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2.3, 'hello', [1, 2, 3, 4], (2, 3, 4, 5), {8, 5, 6, 7}, {1: 5})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to create a tuple with different data types.\n",
     "\n",
@@ -340,18 +312,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3541628d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 3, 4, 5, 6, 7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to create a tuple with numbers.\n",
     "\n",
@@ -361,40 +325,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "dd192342",
+   "execution_count": null,
+   "id": "dda71c62",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abcde\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Write a Python program to convert a tuple to a string.\n",
+    "## Write a Python program to convert a tuple to a string.\n",
     "\n",
-    "t1 = ('a','b','c','d','e')\n",
+    "n = int(input(\"enter how many elements you want in tuple : \"))\n",
+    "l1 = []\n",
+    "for i in range(n):\n",
+    "    a = input(\"enter element : \")\n",
+    "    l1.append(a)\n",
+    "t1 = tuple(l1)\n",
     "str = ''.join(t1)\n",
-    "print(str)"
+    "print(str)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "74a657c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "element exists!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to check whether an element exists within a tuple.\n",
     "\n",
@@ -407,18 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "3270737b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to find the length of a tuple.\n",
     "\n",
@@ -428,18 +373,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "d0247ed1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3, 4, 5, 6, 78)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to convert a list to a tuple.\n",
     "\n",
@@ -450,18 +387,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "9d7d3d16",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(99, 88, 78, 66, 55)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to reverse a tuple.\n",
     "\n",
@@ -472,18 +401,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "736ed16a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(5, 6, 10), (77, 88, 10), (44, 55, 10)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to replace last value of tuples in a list.\n",
     "\n",
@@ -493,12 +414,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d2c0f98f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 22, 1, 1, 22]\n"
+     ]
+    }
+   ],
    "source": [
-    " Write a Python program to find the repeated items of a tuple.\n"
+    "# Write a Python program to find the repeated items of a tuple.\n",
+    "\n",
+    "t1 = (22,33,44,55,22,1,2,1,3,22,4)\n",
+    "list1 = []\n",
+    "for i in t1:\n",
+    "    if t1.count(i) > 1:\n",
+    "        list1.append(i)\n",
+    "#         print(i,end = ' ')\n",
+    "print(list1)"
    ]
   }
  ],
