--- a/module3 - python.ipynb
+++ b/module3 - python.ipynb
@@ -267,9 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Write a Python program to check whether a list contains a sub list\n",
-    "\n",
-    "\n"
+    "# Write a Python program to check whether a list contains a sub list\n"
    ]
   },
   {
@@ -279,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Write a Python program to split a list into different variables.\n"
+    "# Write a Python program to split a list into different variables.\n"
    ]
   },
   {
@@ -326,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda71c62",
+   "id": "faac3a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d2c0f98f",
    "metadata": {},
    "outputs": [
@@ -422,20 +420,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[22, 22, 1, 1, 22]\n"
+      "repeated items in a tuple are :  [22, 33, 1, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
     "# Write a Python program to find the repeated items of a tuple.\n",
     "\n",
-    "t1 = (22,33,44,55,22,1,2,1,3,22,4)\n",
-    "list1 = []\n",
+    "t1 = (22,33,44,55,22,1,2,1,3,2,1,4,3,33,22,4)\n",
+    "l1 =[]\n",
     "for i in t1:\n",
-    "    if t1.count(i) > 1:\n",
-    "        list1.append(i)\n",
-    "#         print(i,end = ' ')\n",
-    "print(list1)"
+    "    t1.count(i)\n",
+    "    if ((t1.count(i) > 1) and (i not in l1)):\n",
+    "        l1.append(i)\n",
+    "print(\"repeated items in a tuple are : \",l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "708e6496",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 3, 4), (2, 55, 66, 77), (0, 9, 8, 7), (76, 77, 5, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to remove an empty tuple(s) from a list of tuples.\n",
+    "\n",
+    "list1 = [(1,2,3,4),(2,55,66,77),(),(0,9,8,7),(),(76,77,5,4)]\n",
+    "a = [i for i in list1 if i]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "756d6e9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'def', 'ghi'] [3, 4, 5] [6, 7, 8, 9] [10, 11, 12, 13, 14] [] [''] "
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to unzip a list of tuples into individual lists.\n",
+    "\n",
+    "a = [('abc','def','ghi'),(3,4,5),(6,7,8,9),(10,11,12,13,14),(),(\"\",)]\n",
+    "for i in a:\n",
+    "    print(list(i),end = ' ')"
    ]
   }
  ],
