--- a/module3 - python.ipynb
+++ b/module3 - python.ipynb
@@ -277,7 +277,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a Python program to split a list into different variables.\n"
+    "# Write a Python program to split a list into different variables.\n",
+    "\n",
+    "list1 = [1,'hello',[6,7,8,89,9],(4,5,6,7,8),99.99]\n",
+    "a,b,c,d,e = list1\n",
+    "print('a = ',a)\n",
+    "print('b = ',b)\n",
+    "print('c = ',c)\n",
+    "print('d = ',d)\n",
+    "print('e = ',e)"
    ]
   },
   {
@@ -412,18 +420,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d2c0f98f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "repeated items in a tuple are :  [22, 33, 1, 2, 3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to find the repeated items of a tuple.\n",
     "\n",
@@ -438,18 +438,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "708e6496",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 2, 3, 4), (2, 55, 66, 77), (0, 9, 8, 7), (76, 77, 5, 4)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to remove an empty tuple(s) from a list of tuples.\n",
     "\n",
@@ -460,24 +452,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "756d6e9f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['abc', 'def', 'ghi'] [3, 4, 5] [6, 7, 8, 9] [10, 11, 12, 13, 14] [] [''] "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to unzip a list of tuples into individual lists.\n",
     "\n",
     "a = [('abc','def','ghi'),(3,4,5),(6,7,8,9),(10,11,12,13,14),(),(\"\",)]\n",
     "for i in a:\n",
     "    print(list(i),end = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a528762b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to convert a list of tuples into a dictionary.\n",
+    "\n",
+    "list1 = [(1,'a'),(3,'b'),(5,'c'),('a',0),('c',1),('e',2)]\n",
+    "print(dict(list1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0f643ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How will you create a dictionary using tuples in python?\n",
+    "\n",
+    "# to create a dictionary using tuples we will use the dict() method,where dict method will take the tuple as an argument and will \n",
+    "# return dict as a key value pair."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7fc8cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python script to sort (ascending and descending) a dictionary by value.\n",
+    "\n",
+    "dict1 = {'a':12,'b':44,'c':3,'d':99,'e':65,'f':25}\n",
+    "\n",
+    "# Ascending order\n",
+    "\n",
+    "l1 = []\n",
+    "dict2 = {}\n",
+    "dict3 = {}\n",
+    "for i in dict1:\n",
+    "    l1.append(dict1[i])\n",
+    "l1.sort()\n",
+    "for i in l1:\n",
+    "    for j in dict1:\n",
+    "        if dict1[j] == i:\n",
+    "            dict2.update({j:i})\n",
+    "print(\"Ascending order : \",dict2)\n",
+    "\n",
+    "# Descending order\n",
+    "\n",
+    "l1.sort(reverse=True)\n",
+    "for i in l1:\n",
+    "    for j in dict1:\n",
+    "        if dict1[j] == i:\n",
+    "            dict3.update({j:i})\n",
+    "print(\"Descending order : \",dict3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a72ae7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python script to concatenate following dictionaries to create a new one.\n",
+    "\n",
+    "dict1 = {1:'a',2:'b'}\n",
+    "dict2 = {3:'c',4:'e','hello':'python'}\n",
+    "dict3 = {5:'f',6:'g',7:'h'}\n",
+    "dict4 = {}\n",
+    "for i in dict1,dict2,dict3:\n",
+    "    dict4.update(i)\n",
+    "print(dict4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5acbe30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python script to check if a given key already exists in a dictionary.\n",
+    "\n",
+    "def key_check(dict,key):\n",
+    "    if key in dict:\n",
+    "        print(f\"key already exists with value {dict[key]}\")\n",
+    "    else:\n",
+    "        print(\"key does not exists\")\n",
+    "dict = {'a':12,'b':44,'c':3,'d':99,'e':65,'f':25}\n",
+    "key = input(\"enter the key : \")\n",
+    "key_check(dict,key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d16f405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "How Do You Traverse Through A Dictionary Object In Python?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40085944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "How Do You Check The Presence Of A Key In A Dictionary?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35147ab3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python script to print a dictionary where the keys are numbers between 1 and 15.\n",
+    "\n",
+    "dict1 = dict()\n",
+    "for i in range(2,15):\n",
+    "    dict1[i] = i+1\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d5aac67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to check multiple keys exists in a dictionary\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d27803a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python script to merge two Python dictionaries\n",
+    "\n",
+    "dict1 = {1:'a',2:'b'}\n",
+    "dict2 = {3:'c',4:'e','hello':'python'}\n",
+    "dict3 = dict1.copy()\n",
+    "dict3.update(dict2)\n",
+    "print(dict3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f17297d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to map two lists into a dictionary\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44a93942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to combine two dictionary adding values for common keys.\n",
+    "\n",
+    "\n",
+    "dict1 = {'a':12,'b':44,'c':3,'d':99,'e':65,'f':25}\n",
+    "dict2 = {'a':15,'b':10,'c':30,'f':20}\n",
+    "for i in dict1:\n",
+    "    if i in dict2:\n",
+    "        dict1[i] = dict1[i] + dict2[i]\n",
+    "    else:\n",
+    "        pass\n",
+    "print(dict1)\n",
+    "#  sample output : {'a':27,'b':54,'c':33,'d':99,'e':65,'f':45}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "501678be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 44, 3, 65, [1, 2, 3, 4], 'seema']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to print all unique values in a dictionary.\n",
+    "\n",
+    "dict1 = {'a':12,'b':44,'c':3,'d':44,'e':65,'f':3,'hello':[1,2,3,4],'hii':'seema'}\n",
+    "list1 = []\n",
+    "for value in dict1.values():\n",
+    "    if value not in list1:\n",
+    "        list1.append(value)\n",
+    "    else:\n",
+    "        continue\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed0fb3c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Why Do You Use the Zip () Method in Python?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5127f8de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to create and display all combinations of letters,selecting each letter from a different key in a\n",
+    "# dictionary.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7fe531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to find the highest 3 values in a dictionary\n"
    ]
   }
  ],
