--- a/module3 - python.ipynb
+++ b/module3 - python.ipynb
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a528762b",
+   "id": "b5b50739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f643ef",
+   "id": "297a1050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7fc8cfc",
+   "id": "fd30ad48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a72ae7c",
+   "id": "5d219ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5acbe30",
+   "id": "aab08adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d16f405",
+   "id": "d22f1aeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40085944",
+   "id": "756ea7e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35147ab3",
+   "id": "47b9d26c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d5aac67",
+   "id": "7ce91b56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d27803a",
+   "id": "41d1a198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,49 +627,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f17297d6",
+   "id": "0781832c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a Python program to map two lists into a dictionary\n",
-    "\n"
+    "\n",
+    "key = [1,2,3,4,5]\n",
+    "value = ['a','b','c','d','e']\n",
+    "d = {}\n",
+    "for i in range(len(key)):\n",
+    "    d.setdefault(key[i],value[i])\n",
+    "print(d)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44a93942",
+   "id": "42bddb73",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a Python program to combine two dictionary adding values for common keys.\n",
     "\n",
     "\n",
-    "dict1 = {'a':12,'b':44,'c':3,'d':99,'e':65,'f':25}\n",
-    "dict2 = {'a':15,'b':10,'c':30,'f':20}\n",
+    "dict1 = {'a': 100, 'b': 200, 'c':300,'d':500}\n",
+    "dict2 = {'a': 300, 'b': 200,'c':400,'f':900}\n",
+    "dict3 = {}\n",
     "for i in dict1:\n",
-    "    if i in dict2:\n",
-    "        dict1[i] = dict1[i] + dict2[i]\n",
-    "    else:\n",
-    "        pass\n",
-    "print(dict1)\n",
+    "    for j in dict2:\n",
+    "        if i == j:\n",
+    "            dict3.setdefault(i,dict1[i]+dict2[j])\n",
+    "        else:\n",
+    "            dict3.setdefault(i,dict1[i])\n",
+    "            dict3.setdefault(j,dict2[j])\n",
+    "\n",
+    "print(dict3)\n",
     "#  sample output : {'a':27,'b':54,'c':33,'d':99,'e':65,'f':45}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "501678be",
+   "execution_count": null,
+   "id": "fc6fd4b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[12, 44, 3, 65, [1, 2, 3, 4], 'seema']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to print all unique values in a dictionary.\n",
     "\n",
@@ -686,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed0fb3c5",
+   "id": "0b47f56c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,24 +698,145 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5127f8de",
+   "id": "3e122a6a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a Python program to create and display all combinations of letters,selecting each letter from a different key in a\n",
     "# dictionary.\n",
-    "\n"
+    "dict1={'1': ['a','b'], '2': ['c','d']}\n",
+    "list1=[]\n",
+    "\n",
+    "list1=list(dict1.values())\n",
+    "for i in range(len(list1)):\n",
+    "    for j in range(len(list1)):\n",
+    "        print(list1[0][i],list1[1][j])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7fe531",
+   "id": "938b9476",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a Python program to find the highest 3 values in a dictionary\n"
+    "# Write a Python program to find the highest 3 values in a dictionary\n",
+    "\n",
+    "d = {'a':12,'b':44,'c':3,'d':99,'e':65,'f':25}\n",
+    "l1=list(d.values())\n",
+    "l1.sort()\n",
+    "print(\"highest three values in dictionary are : \",l1[-3:])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "985ad298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to combine values in python list of dictionaries. \n",
+    "# Sample data: [{'item': 'item1', 'amount': 400}, {'item': 'item2', 'amount': \n",
+    "# 300},\n",
+    "# o {'item': 'item1', 'amount': 750}]\n",
+    "# o Expected Output: Counter ({'item1': 1150, 'item2': 300})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7b441c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to create a dictionary from a string.\n",
+    "# o Note: Track the count of the letters from the string. Sample string:\n",
+    "# 'w3resource'\n",
+    "# o Expected output: {'3': 1,’s’: 1, 'r': 2, 'u': 1, 'w': 1, 'c': 1, 'e': 2, 'o': 1}\n",
+    "\n",
+    "string = input(\"enter string : \")\n",
+    "d1 = {}\n",
+    "for i in string:\n",
+    "    if i in d1:\n",
+    "        d1[i]+=1\n",
+    "    else:\n",
+    "        d1[i]=1\n",
+    "print(d1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c5dd2bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python function to calculate the factorial of a number (a non\u0002negative integer)\n",
+    "\n",
+    "def fact(num):\n",
+    "    if num > 1:\n",
+    "        return num*fact(num - 1)\n",
+    "    else:\n",
+    "        return num\n",
+    "num = int(input(\"enter number : \"))\n",
+    "fact(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7312849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Write a Python function to check whether a number is in a given range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41154e40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Write a Python function to check whether a number is perfect or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6cc5e77a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter string : woow\n",
+      "yes it is a palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python function that checks whether a passed string is palindrome or not\n",
+    "\n",
+    "def fun(string):\n",
+    "    if string == string[::-1]:\n",
+    "        print(\"yes it is a palindrome\")\n",
+    "    else:\n",
+    "        print(\"it is not a palindrome\")\n",
+    "\n",
+    "string = input(\"enter string : \")\n",
+    "fun(string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33a3602b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
