--- a/module3 - python.ipynb
+++ b/module3 - python.ipynb
@@ -569,7 +569,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "How Do You Traverse Through A Dictionary Object In Python?"
+    "# How Do You Traverse Through A Dictionary Object In Python?\n",
+    "\n",
+    "# we can traverse through a dictionary object in python in the following ways:\n",
+    "# -> using bulid in function .keys(),which will return the keys in the dict\n",
+    "# -> using bulid in function .values(),which will return the values in the dict\n",
+    "# -> using bulid in function .items(),which will return the key & value pair in the dict"
    ]
   },
   {
@@ -579,22 +584,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "How Do You Check The Presence Of A Key In A Dictionary?"
+    "# How Do You Check The Presence Of A Key In A Dictionary?\n",
+    "\n",
+    "# Using has_key() method it returns true if a given key is available in the dictionary, otherwise, it returns a false. \n",
+    "# With the Inbuilt method has_key(),  we use the if statement to check if the key is present in the dictionary or not. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "47b9d26c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 3, 3: 4, 4: 5, 5: 6, 6: 7, 7: 8, 8: 9, 9: 10, 10: 11, 11: 12, 12: 13, 13: 14, 14: 15}\n",
+      "{3: 'c', 4: 'e', 5: 'tina', 9: 81}\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a Python script to print a dictionary where the keys are numbers between 1 and 15.\n",
     "\n",
     "dict1 = dict()\n",
     "for i in range(2,15):\n",
     "    dict1[i] = i+1\n",
-    "print(dict1)"
+    "print(dict1)\n",
+    "\n",
+    "# ************************ OR **************************\n",
+    "\n",
+    "d1 = {3:'c',4:'e','hello':'python','hii':'byee',5:'tina',9:81,6.7:8.9,77:66,15:15}\n",
+    "d2 = {}\n",
+    "for i in d1:\n",
+    "    if type(i) == int and i<15:\n",
+    "        d2.setdefault(i,d1[i])\n",
+    "print(d2)"
    ]
   },
   {
@@ -610,10 +636,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "41d1a198",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'a', 2: 'b', 3: 'c', 4: 'e', 'hello': 'python'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a Python script to merge two Python dictionaries\n",
     "\n",
@@ -643,15 +677,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "42bddb73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 400, 'b': 200, 'c': 400, 'f': 900, 'd': 500}\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a Python program to combine two dictionary adding values for common keys.\n",
     "\n",
     "\n",
-    "dict1 = {'a': 100, 'b': 200, 'c':300,'d':500}\n",
+    "dict1 = {'a': 100, 'b': 200, 'c':300,'d':500,}\n",
     "dict2 = {'a': 300, 'b': 200,'c':400,'f':900}\n",
     "dict3 = {}\n",
     "for i in dict1:\n",
@@ -687,20 +729,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0b47f56c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 5), (2, 6), (3, 7), (4, 8)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Why Do You Use the Zip () Method in Python?\n"
+    "# Why Do You Use the Zip () Method in Python?\n",
+    "\n",
+    "# we use the zip() method in python because this method creates an iterable that will aggregate the two or more iterable.\n",
+    "\n",
+    "# example :\n",
+    "\n",
+    "# l1 = [1,2,3,4]\n",
+    "# l2 = [5,6,7,8]\n",
+    "# l3 = zip(l1,l2)\n",
+    "# print(list(l3))\n",
+    "\n",
+    "# o/p : [(1, 5), (2, 6), (3, 7), (4, 8)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3e122a6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a c\n",
+      "a d\n",
+      "b c\n",
+      "b d\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a Python program to create and display all combinations of letters,selecting each letter from a different key in a\n",
     "# dictionary.\n",
@@ -730,16 +802,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "985ad298",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a Python program to combine values in python list of dictionaries. \n",
-    "# Sample data: [{'item': 'item1', 'amount': 400}, {'item': 'item2', 'amount': \n",
-    "# 300},\n",
-    "# o {'item': 'item1', 'amount': 750}]\n",
-    "# o Expected Output: Counter ({'item1': 1150, 'item2': 300})"
+    "# Sample data: [{'item': 'item1', 'amount': 400}, {'item': 'item2', 'amount': 300},{'item': 'item1', 'amount': 750}]\n",
+    "# o Expected Output: Counter ({'item1': 1150, 'item2': 300})\n"
    ]
   },
   {
@@ -784,12 +854,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b7312849",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the number : 25\n",
+      "enter starting range : 20\n",
+      "enter ending range : 40\n",
+      "given number is in a range....\n"
+     ]
+    }
+   ],
    "source": [
-    "Write a Python function to check whether a number is in a given range"
+    "# Write a Python function to check whether a number is in a given range.\n",
+    "\n",
+    "def find(num,l,r):\n",
+    "    if num>=l and num<=r:\n",
+    "        print('given number is in a range....')\n",
+    "    else:\n",
+    "        print('given number is not in a range....')\n",
+    "\n",
+    "num = int(input(\"enter the number : \"))\n",
+    "l = int(input(\"enter starting range : \"))\n",
+    "r = int(input(\"enter ending range : \"))\n",
+    "find(num,l,r)"
    ]
   },
   {
@@ -799,7 +891,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Write a Python function to check whether a number is perfect or not."
+    "# Que :Write a Python function to check whether a number is perfect or not.\n",
+    "\n",
+    "# A perfect number is a number which is equal to the sum of its proper divisors\n",
+    "# i.e. all its divisors including 1 but not the number itself. \n",
+    "# example :1+2+3 = 6\n",
+    "\n",
+    "def check(nim):\n",
+    "    sum = 0\n",
+    "    for i in range(1,num):\n",
+    "        if num % i == 0:\n",
+    "            sum += i\n",
+    "        else:\n",
+    "            continue\n",
+    "    return sum == num\n",
+    "num = int(input(\"enter the number: \"))\n",
+    "check(num)"
    ]
   },
   {
@@ -836,7 +943,150 @@
    "id": "33a3602b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# How do you perform pattern matching in Python? Explain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8469590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is lambda function in python? What we call a function which is incomplete version of a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26668885",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How Many Basic Types Of Functions Are Available In Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "271e16e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How Many Basic Types Of Functions Are Available In Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dca3f08d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How can you pick a random item from a range?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89167106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How will you set the starting value in generating random numbers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61972fc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How will you randomizes the items of a list in place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b87acad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Write a Python program to read a random line from a file.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee4cabe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Write a Python program to read a random line from a file.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e8bc868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to convert degree to radian\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb588ce3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to calculate the area of a trapezoid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5b1dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Write a Python program to calculate the area of a parallelogram\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82bb8db6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to calculate surface volume and area of a cylinder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cd75f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Write a Python program to returns sum of all divisors of a number\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cc07797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python program to find the maximum and minimum numbers from the specified decimal numbers.\n"
+   ]
   }
  ],
  "metadata": {
