--- a/module3 _kimi.ipynb
+++ b/module3 _kimi.ipynb
@@ -592,19 +592,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "47b9d26c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2: 3, 3: 4, 4: 5, 5: 6, 6: 7, 7: 8, 8: 9, 9: 10, 10: 11, 11: 12, 12: 13, 13: 14, 14: 15}\n",
-      "{3: 'c', 4: 'e', 5: 'tina', 9: 81}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python script to print a dictionary where the keys are numbers between 1 and 15.\n",
     "\n",
@@ -636,18 +627,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "41d1a198",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1: 'a', 2: 'b', 3: 'c', 4: 'e', 'hello': 'python'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python script to merge two Python dictionaries\n",
     "\n",
@@ -677,18 +660,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "42bddb73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 400, 'b': 200, 'c': 400, 'f': 900, 'd': 500}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to combine two dictionary adding values for common keys.\n",
     "\n",
@@ -729,18 +704,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0b47f56c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 5), (2, 6), (3, 7), (4, 8)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Why Do You Use the Zip () Method in Python?\n",
     "\n",
@@ -758,21 +725,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3e122a6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a c\n",
-      "a d\n",
-      "b c\n",
-      "b d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python program to create and display all combinations of letters,selecting each letter from a different key in a\n",
     "# dictionary.\n",
@@ -802,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "985ad298",
    "metadata": {},
    "outputs": [],
@@ -854,21 +810,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "b7312849",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter the number : 25\n",
-      "enter starting range : 20\n",
-      "enter ending range : 40\n",
-      "given number is in a range....\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python function to check whether a number is in a given range.\n",
     "\n",
@@ -911,19 +856,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6cc5e77a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter string : woow\n",
-      "yes it is a palindrome\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python function that checks whether a passed string is palindrome or not\n",
     "\n",
@@ -944,7 +880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How do you perform pattern matching in Python? Explain"
+    "# How do you perform pattern matching in Python? Explain\n"
    ]
   },
   {
@@ -954,7 +890,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What is lambda function in python? What we call a function which is incomplete version of a function"
+    "# What is lambda function in python? What we call a function which is incomplete version of a function?\n",
+    "\n",
+    "# lambda function is an anonymous function in python.\n",
+    "# Lambda function is a function with multiple parameters but single expression "
    ]
   },
   {
@@ -964,17 +903,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How Many Basic Types Of Functions Are Available In Python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "271e16e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# How Many Basic Types Of Functions Are Available In Python"
+    "# How Many Basic Types Of Functions Are Available In Python\n",
+    "\n",
+    "# basic three types of function are available in python:\n",
+    "# 1) Built-in fun\n",
+    "# 2) User-defined fun\n",
+    "# 3) Anonymous fun"
    ]
   },
   {
@@ -984,7 +918,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How can you pick a random item from a range?"
+    "# How can you pick a random item from a range?\n",
+    "\n",
+    "# first import random module than\n",
+    "# using random.randrange() we can pick a random item from a range\n",
+    "\n",
+    "# example\n",
+    "\n",
+    "# import random as re\n",
+    "# a = re.randrange(5)\n",
+    "# print(a)"
    ]
   },
   {
@@ -994,7 +937,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How will you set the starting value in generating random numbers?"
+    "# How will you set the starting value in generating random numbers?\n",
+    " \n",
+    "# Use the seed() method to customize the start number of the random number generator."
    ]
   },
   {
@@ -1004,7 +949,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How will you randomizes the items of a list in place"
+    "# How will you randomizes the items of a list in place\n",
+    "\n",
+    "# using random.shuffle() method we can randomizes the items of a list in place\n",
+    "\n",
+    "# example\n",
+    "\n",
+    "# import random\n",
+    "# list1 = [1,2,3,4,5,6]\n",
+    "# random.shuffle(list1)\n",
+    "# print(list1)"
    ]
   },
   {
@@ -1014,17 +968,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  Write a Python program to read a random line from a file.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ee4cabe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  Write a Python program to read a random line from a file.\n"
+    "#  Write a Python program to read a random line from a file.\n",
+    "\n",
+    "import random\n",
+    "f1 = open('sample.txt','r')\n",
+    "a = random.choice(f1.readlines())\n",
+    "print(a)"
    ]
   },
   {
@@ -1035,7 +984,23 @@
    "outputs": [],
    "source": [
     "# Write a Python program to convert degree to radian\n",
-    " "
+    "\n",
+    "# without using math module\n",
+    "\n",
+    "def degree_to_radian(degree):\n",
+    "    pi = 22/7\n",
+    "    radian = degree * (pi / 180)\n",
+    "    print('radian value = ',radian)\n",
+    "degree = float(input(\"enter value in degrees : \"))\n",
+    "degree_to_radian(degree)\n",
+    "\n",
+    "# -------------------------- OR ------------------------------\n",
+    "# using math module\n",
+    "\n",
+    "from math import pi\n",
+    "degree=float(input())\n",
+    "r = degree*(pi/180)\n",
+    "print(r)"
    ]
   },
   {
@@ -1045,7 +1010,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a Python program to calculate the area of a trapezoid"
+    "# Write a Python program to calculate the area of a trapezoid\n",
+    "\n",
+    "# a and b = base\n",
+    "# h = height\n",
+    "# formula(area of trapezoid) = (((a+b)/2)*h)\n",
+    "\n",
+    "def area_of_trapezoid(a,b,h):\n",
+    "    area = (((a+b)/2)*h)\n",
+    "    return area\n",
+    "\n",
+    "a = float(input(\"enter base 1 : \"))\n",
+    "b = float(input(\"enter base 2 : \"))\n",
+    "h = float(input(\"enter height : \"))\n",
+    "area_of_trapezoid(a,b,h)"
    ]
   },
   {
@@ -1055,7 +1033,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  Write a Python program to calculate the area of a parallelogram\n"
+    "#  Write a Python program to calculate the area of a parallelogram\n",
+    "\n",
+    "# area of parallelogram = base * height\n",
+    "\n",
+    "def area_of_parallelogram(base,height):\n",
+    "    area = base * height\n",
+    "    return area\n",
+    "\n",
+    "base = float(input(\"enter base : \"))\n",
+    "height = float(input(\"enter height: \"))\n",
+    "area_of_parallelogram(base,height)"
    ]
   },
   {
@@ -1065,7 +1053,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a Python program to calculate surface volume and area of a cylinder"
+    "# Write a Python program to calculate surface volume and area of a cylinder\n",
+    "\n",
+    "# volume = πr^2h\n",
+    "# surafce area = 2πr(r+h)\n",
+    "\n",
+    "from math import pi\n",
+    "\n",
+    "def cylinder(radius,height):\n",
+    "    volume = pi * radius * radius * h\n",
+    "    surface_area = (2 * pi * radius) * (radius + height)\n",
+    "    print(\"volume of cylinder = \",volume)\n",
+    "    print(\"surface area of cylinder = \",surface_area)\n",
+    "\n",
+    "radius = float(input(\"enter radius : \"))\n",
+    "height = float(input(\"enter height : \"))\n",
+    "cylinder(radius,height)"
    ]
   },
   {
@@ -1075,7 +1078,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  Write a Python program to returns sum of all divisors of a number\n"
+    "#  Write a Python program to returns sum of all divisors of a number\n",
+    "\n",
+    "def fun(n):\n",
+    "    sum = 0\n",
+    "    for i in range(1,n):\n",
+    "        if n % i == 0:\n",
+    "            sum += i\n",
+    "    return sum\n",
+    "\n",
+    "n = int(input(\"enter number : \"))\n",
+    "fun(n)"
    ]
   },
   {
@@ -1085,7 +1098,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a Python program to find the maximum and minimum numbers from the specified decimal numbers.\n"
+    "# Write a Python program to find the maximum and minimum numbers from the specified decimal numbers.\n",
+    "\n",
+    "def max_min(list1):\n",
+    "    a = max(list1)\n",
+    "    b = min(list1)\n",
+    "    return a,b\n",
+    "list1 = [2.3,4,5,22.4,0.1,0.001,78.65,99.99,20.5]\n",
+    "max_min(list1)"
    ]
   }
  ],
