--- a/Module4_kimi.ipynb
+++ b/Module4_kimi.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5568b78",
+   "id": "be322412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0bc124f",
+   "id": "ee818687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "eb8a6d7c",
+   "execution_count": null,
+   "id": "b6695fd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "239da2eb",
+   "execution_count": null,
+   "id": "44895a99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3d950b5",
+   "id": "f75e6c4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8cbf5e",
+   "id": "11b34350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20318173",
+   "id": "c18f5017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27189be2",
+   "id": "ee7f6e70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d5b14e",
+   "id": "b9e903f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c865874",
+   "id": "f4d87e36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,19 +280,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ea7fe5ce",
+   "execution_count": null,
+   "id": "95129a78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "finally block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# How Do You Handle Exceptions With Try/Except/Finally In Python? Explain with coding snippets.\n",
     "\n",
@@ -309,18 +300,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "088210ba",
+   "execution_count": null,
+   "id": "9e22a1b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter number :3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write python program that user to enter only odd numbers, else will raise an exception.\n",
     "\n",
@@ -338,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2d57ff8",
+   "id": "dc3ee5b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,18 +333,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "69a020c7",
+   "execution_count": null,
+   "id": "bf69ee79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fruit name\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# How to Define a Class in Python? What Is Self? Give An Example Of A Python Class\n",
     "\n",
@@ -379,18 +354,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "4dea4adb",
+   "execution_count": null,
+   "id": "ed280a24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python class named Rectangle constructed by a length and width and a method which will compute the area of a rectangle\n",
     "\n",
@@ -408,19 +375,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "5f8ef79d",
+   "execution_count": null,
+   "id": "aa06e308",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "78.5\n",
-      "31.400000000000002\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a Python class named Circle constructed by a radius and two methods which will compute the area and the perimeter \n",
     "# of a circle\n",
@@ -443,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b7b1ec1",
+   "id": "b951a855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,53 +410,65 @@
     "# inheritance is the capability of one class to derive the properties from another class. \n",
     "# inti creates object in a class,it is a special method in class/it is also called as constructor\n",
     "\n",
+    "# example\n",
+    "\n",
     "class A:\n",
     "    school_name = 'gajera'\n",
     "    def __init__(self,age,height):\n",
     "        self.age=age\n",
     "        self.height=height\n",
-    "    def name():\n",
-    "        "
+    "    def name(self):\n",
+    "        print('hello..')\n",
+    "a1 = A(20,5.11)\n",
+    "a1.age"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0792e723",
+   "id": "83336224",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What is Instantiation in terms of OOP terminology?"
+    "# What is Instantiation in terms of OOP terminology?\n",
+    "\n",
+    "# instantiation describes the processes of creating a new object for a class using a new keyword."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "459ee911",
+   "id": "fa041eff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What is used to check whether an object o is an instance of class A?\n"
+    "# What is used to check whether an object o is an instance of class A?\n",
+    "\n",
+    "# The isinstance() function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc5bfdd",
+   "id": "146c06dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What relationship is appropriate for Course and Faculty?\n"
+    "# What relationship is appropriate for Course and Faculty?\n",
+    "\n",
+    "#association"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de65333e",
+   "id": "cf93f0ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What relationship is appropriate for Student and Person?"
+    "# What relationship is appropriate for Student and Person?\n",
+    "\n",
+    "# inheritence"
    ]
   }
  ],
